syntax = "proto3";

package psm.list.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/pentops/protostate/gen/list/v1/psml_pb";

message PageRequest {
  optional string token = 1;
  optional int64 page_size = 2[(buf.validate.field).int64.gt = 0];
}

message PageResponse {
  optional string next_token = 1;
}
